Make work with java 1.8